# relaxng-rust

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: bench.rs
relaxng-model/: Cargo.toml
relaxng-model/benches/: bench.rs
relaxng-model/src/: lib.rs  model.rs
relaxng-model/src/datatype/: mod.rs  relax.rs  xsd.rs
relaxng-syntax/: .gitignore  Cargo.toml
relaxng-syntax/src/: compact.rs  lib.rs  parse.rs  types.rs  xml.rs
relaxng-tool/: Cargo.toml
relaxng-tool/src/: main.rs
relaxng-validator/: Cargo.toml
relaxng-validator/src/: lib.rs
relaxng-validator/tests/: README.md  spectest.rs  spectest.xml
src/: lib.rs  model.rs  parse.rs  types.rs
src/datatype/: xsd.rs
