[package]
name = "relaxng-model"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relaxng-syntax = { path = "../relaxng-syntax" }
nom = "5.0"
nom_locate = "1.0"
codemap = "0.1"
codemap-diagnostic = "0.1"
regex = "1.3.4"
num-bigint = "0.2.6"
bigdecimal = "0.2.0"
lazy_static = "1.4.0"
chrono = "0.4.19"
uriparse = "0.6.3"

[dev-dependencies]
criterion = "0.3"
assert_matches = "1.3"

[[bench]]
name = "bench"
harness = false

