[package]
name = "relaxng-model"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
relaxng-syntax = { path = "../relaxng-syntax" }
nom = "8.0"
nom_locate = "5.0"
codemap = "0.1"
codemap-diagnostic = "0.1"
regex = "1.11.1"
num-bigint = "0.4.6"
bigdecimal = "0.4.8"
lazy_static = "1.5.0"
chrono = "0.4.19"
uriparse = "0.6.3"

[dev-dependencies]
criterion = "0.8"
assert_matches = "1.3"

[[bench]]
name = "bench"
harness = false
