[package]
name = "relaxng-syntax"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.0"
nom_locate = "1.0"
roxmltree = "0.20.0"
url = "2.5.4"
rfc2396 = "1.1.0"

[dev-dependencies]
assert_matches = "1.4.0"
