[package]
name = "relaxng-syntax"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "8.0"
nom_locate = "5.0"
roxmltree = "0.20.0"
fluent-uri = "0.4.1"

[dev-dependencies]
assert_matches = "1.4.0"
