[package]
name = "relaxng-tool"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
structopt-derive = "0.4.14"
relaxng-validator = { path = "../relaxng-validator" }
relaxng-model = { path = "../relaxng-model" }
xmlparser = "0.13.3"
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"

[[bin]]
name = "rng"
path = "src/main.rs"
